<resources>
    <string name="app_name">Convene</string>
    <string name="action_community">Community</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_jobs">Jobs</string>
    <string name="action_connections">Connections</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back 👋</string>
    <string name="close">close</string>
    <string name="sign_in_to_your_account">I am happy to see you again. You can \ncontinue where you left off by logging in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_txt">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="sign_up">Welcome to Convene 👋</string>
    <string name="signup_note">Hello, I guess you are new around here. You can start using the application after sign up.</string>
    <string name="username">Username</string>
    <string name="password_criteria">Your Password must be 8 or more characters long &amp; contain a mix of upper &amp; lower case letters, numbers &amp; symbols.</string>
    <string name="create_account">Create an Account</string>
    <string name="signing_up">Already have an account? <b>Sign In</b></string>
    <string name="profile_picture">Profile Picture</string>
    <!-- Strings used for fragments for navigation -->
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="see_more">See More</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="community">Community\'s</string>
    <string name="connection">Connection\'s</string>
    <string name="about_me">About Me</string>
    <string name="experience">Experience</string>
    <string name="description">Description:</string>
    <string name="desc">Description</string>
    <string name="education">Education</string>
    <string name="landc">License &amp; Certificates</string>
    <string name="skills">Skills</string>
    <string name="recommendation">Recommendation</string>
    <string name="course_heading_1">Create new experience with ways of Perfect Learning</string>
    <string name="skills_head_2">Get world class Course from World Class Mentors</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="add_exp">There is No Experience. Click on the Add Button to add Experience</string>
    <string name="add_edu">There is No Education. Click on the Add Button to add Education</string>
    <string name="add_landc">There are No License &amp; Certificates. Click on the Add Button to add License &amp; Certificates</string>
    <string name="add_skills">There are No Skills. Click on the Add Button to add Skills</string>
    <string name="add_projects">There are no Projects. Click on the Add Button to add Projects</string>
    <string name="add_recommendation">There are no Recommendation. Click on the Add Button to add Recommendation</string>
    <string name="projects">Projects</string>
    <string name="add_experience">Add Experience</string>
    <string name="title_head">Title*</string>
    <string name="title_hint">Ex: Software Engineer</string>
    <string name="employment_type">Employment Type</string>
    <string name="please_select">Please Select</string>
    <string name="ex_apple">Ex: Apple</string>
    <string name="company_name">Company Name*</string>
    <string name="ex_london_united_kingdom">Ex: London, United Kingdom</string>
    <string name="location">Location</string>
    <string name="location_type">Location Type</string>
    <string name="start_date">Start Date*</string>
    <string name="start_date_not">Start Date</string>
    <string name="end_date">End Date*</string>
    <string name="end_date_hint">End Date (or expected)</string>
    <string name="end_date_not">End Date</string>
    <string name="location_ex">Pick a Location type (ex: remote)</string>
    <string name="currently_working">I am Currently Working in this role</string>
    <string name="current_pos">End Current position as of now -</string>
    <string name="industry">Industry*</string>
    <string name="ex_industry">Ex: Software Development</string>
    <string name="limit">0/2000</string>
    <string name="limit_3000">0/3000</string>
    <string name="limit_ands">0/500</string>
    <string name="skills_desc">We recommend adding your top 3 used in this role. They\'ll also appear in your Skills Section.</string>
    <string name="skills_desc_landc">Associate at least 1 skill to this license or certification. It\'ll also appear in your Skills Section.</string>
    <string name="add_skill">Add Skill</string>
    <string name="save">Save</string>
    <string name="add_post">Add Post</string>
    <string name="add_education">Add Education</string>
    <string name="school">School*</string>
    <string name="ex_school">Ex: Boston University</string>
    <string name="degree">Degree</string>
    <string name="ex_bachelor_s">Ex: Bachelor\'s</string>
    <string name="fos">Field of Study</string>
    <string name="ex_fos">Ex: Business</string>
    <string name="grade">Grade</string>
    <string name="activites_and_socities">Activites and Socities</string>
    <string name="ex_ands">Ex: Basketball, Cricket</string>
    <string name="add_landc_title">Add license or certification</string>
    <string name="name">Name*</string>
    <string name="ex_lands">Ex: Apple iOS App Development</string>
    <string name="issuing_organization">Issuing Organization*</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="credential_id">Credential ID</string>
    <string name="credential_url">Credential URL</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name*</string>
    <string name="additional_details">Additional Details</string>
    <string name="current_project">I am currently working on this project</string>
    <string name="contributors">Contributors</string>
    <string name="add_contributors_desc">Add connections who contributes to this project.</string>
    <string name="add_contributor_chip">Add Contributor</string>
    <string name="associated_with">Associated With</string>
    <string name="search_for_people">Search for people*</string>
    <string name="relationship">Relationship*</string>
    <string name="position_at_the_time">Position at the time*</string>
    <string name="add_recommendation_title">Add Recommendation*</string>
    <string name="send">Send</string>
    <string name="ask">Ask for a recommendation</string>
    <string name="give_recommendation">Give recommendation</string>
    <string name="search_hint">Search Jobs, Posts, People...</string>
    <string name="dashboard_tag">Your Skills, Your Future, \nYour Success, All in One App.</string>
    <string name="get_started">Get Started</string>
  <string name="notifications">Notifications</string>
  <string name="messages">Messages</string>

</resources>