<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smitcoderx.convene.Ui.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/action_community"
        android:orderInCategory="100"
        android:title="@string/action_community"
        android:icon="@drawable/comm"/>

    <item
        android:id="@+id/action_connections"
        android:orderInCategory="100"
        android:title="@string/action_connections"
        android:icon="@drawable/network"/>

    <item
        android:id="@+id/action_jobs"
        android:orderInCategory="100"
        android:title="@string/action_jobs"
        android:icon="@drawable/jobs"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        android:icon="@drawable/profile"/>
</menu>