<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Dashboard.DashboardFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_handShake"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        app:srcCompat="@drawable/hand_shake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_20ssp"
        android:elegantTextHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_handShake"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tv_appName"
        android:text="@string/dashboard_tag"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_started"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_started"
        android:backgroundTint="@color/accent_color"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/_13ssp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        app:cornerRadius="@dimen/_5sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>